compositor: paint, enable and disable the cursor only in composite()

(only) doing it asynchronously has disadvantages:
- we can easily miss some situations in which the layer needs repainting
- when moving the cursor plane fails, we can have some time between hiding
  the cursor plane and showing the software cursor, or likewise, some time
  between showing the cursor plane and hiding the software cursor
- it requires special casing presentation feedback for the cursor

With this change, the cursor is still moved asynchronously, so primary plane
updates still can't slow cursor movement down or affect its latency.

BUG: 504890