src/scene/cursoritem.h
@@ -26,6 +26,7 @@ public:
     QPointF hotspot() const;
 
 private:
+    void updateVisibility();
     void refresh();
     void setSurface(SurfaceInterface *surface, const QPointF &hotspot);
     void setImage(const QImage &image, const QPointF &hotspot);
