src/scene/imageitem.cpp
@@ -25,6 +25,7 @@ void ImageItem::setImage(const QImage &image)
 {
     m_image = image;
     discardQuads();
+    scheduleRepaint(boundingRect());
 }
 
 ImageItemOpenGL::ImageItemOpenGL(Item *parent)
