src/scene/item.cpp
@@ -525,6 +525,12 @@ WindowQuadList Item::quads() const
     return m_quads.value();
 }
 
+bool Item::hasRepaints(RenderView *view)
+{
+    const auto it = m_repaints.find(view);
+    return it != m_repaints.end() && !it->isEmpty();
+}
+
 QRegion Item::takeRepaints(RenderView *view)
 {
     auto &repaints = m_repaints[view];
