src/scene/scene.h
@@ -112,6 +112,8 @@ public:
 
     Item *item() const;
 
+    bool needsRepaint();
+    bool isVisible() const;
     bool canSkipMoveRepaint(Item *item) override;
 
 private:
